fixing text wraping prb and vw icon prb

--- a/src/app/mycarousel/mycarousel.component.scss
+++ b/src/app/mycarousel/mycarousel.component.scss
@@ -68,6 +68,6 @@ mat-card {
 }
 .controls{
   top: 88% !important;
-  left: -243px !important;
+  left: -284px !important;
   width: 7% !important;
 }
