--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -201,7 +201,7 @@
         border: none;
 
         img {
-          width: 4vw;
+          width: 47px;
         }
 
         h3 {
